[workspace]
members = ["host", "guest", "utils"]

[workspace.package]
name = "openvm-ream"
version = "0.1.0"
edition = "2021"
#rust-version = "1.85"
[workspace.dependencies]

# OpenVM
openvm = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.3.0", features = [
    "std",
] }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.2.0", default-features = false }
openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.2.0", default-features = false }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.1.0" }
openvm-build = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.2.0", default-features = false }
openvm-transpiler = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.2.0", default-features = false }


# Ream dependencies
ream-consensus = { git = "https://github.com/syjn99/ream", package = "ream-consensus", rev = "50d148b9b0f6f6064dbe3803515f1e10ead93d42", features = [
    "zkvm",
] }

# Local dependencies
utils = { path = "utils" }

# Miscellaneous dependencies
eyre = "0.6"
serde = "1.0"

# Always optimize.
[profile.dev]
opt-level = 3

[patch.crates-io]
ethereum_hashing = { git = "https://github.com/ReamLabs/ethereum_hashing" }
ssz_types = { git = "https://github.com/ReamLabs/ssz_types", branch = "magic-extended-list" } # Extends 2^29 to 2^40 list root
