[workspace]
members = ["host", "utils", "lib"]
exclude = ["guest"]
resolver = "3" # If using a virtual workspace, the version should be specified in the [workspace] table

[workspace.package]
name = "openvm-ream"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[workspace.dependencies]

# OpenVM
openvm = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.0", features = [
    "std",
] }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.0", default-features = false }
openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.0", default-features = false }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.1.0" }
openvm-build = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.0", default-features = false }
openvm-transpiler = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.0", default-features = false }
openvm-benchmarks-prove = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.0", default-features = false }
openvm-rv32im-circuit = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.0", default-features = false }
openvm-rv32im-transpiler = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.0", default-features = false }
openvm-stark-backend = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v1.2.0", default-features = false }

# Plonky dependencies
p3-monty-31 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "539bbc84085efb609f4f62cb03cf49588388abdb" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git", features = [
    "nightly-features",
], rev = "539bbc84085efb609f4f62cb03cf49588388abdb" }

# Ream dependencies

# ream-consensus = { git = "https://github.com/ReamLabs/ream.git", rev = "2a43d55", package = "ream-consensus", features = ["zkvm"]}
ream-consensus = { git = "https://github.com/syjn99/ream", package = "ream-consensus", rev = "50d148b9b0f6f6064dbe3803515f1e10ead93d42", features = [
    "zkvm",
] }

# Miscellaneous dependencies for lib
tree_hash = "0.10"
tree_hash_derive = "0.10"
ethereum_ssz = "0.9"
tracing = "0.1"

# Local dependencies
utils = { path = "utils" }
ream-lib = { path = "lib" }

# Miscellaneous dependencies
eyre = "0.6"
serde = "1.0"

# Always optimize.
[profile.dev]
opt-level = 3

[patch.crates-io]
ethereum_hashing = { git = "https://github.com/ReamLabs/ethereum_hashing", rev = "c14a9ad96436e6b8b631faf49a3666e4558b71ae" }
ssz_types = { git = "https://github.com/ReamLabs/ssz_types", branch = "magic-extended-list" }                                 # Extends 2^29 to 2^40 list root
