[package]
name = "guest"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
# OpenVM dependencies
openvm = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.0", features = [
    "std",
] }

# Miscellaneous dependencies
tree_hash = "0.10"
# Ream dependencies
# ream-consensus = { git = "https://github.com/ReamLabs/ream.git", rev = "2a43d55", package = "ream-consensus" }
ream-consensus = { git = "https://github.com/syjn99/ream", package = "ream-consensus", rev = "50d148b9b0f6f6064dbe3803515f1e10ead93d42", features = [
    "zkvm",
] }

ream-lib = { path = "../lib" }

# Miscellaneous dependencies
sha2 = "0.10.6"
hex = "0.4.3"

[patch.crates-io]
ethereum_hashing = { git = "https://github.com/ReamLabs/ethereum_hashing", rev = "c14a9ad96436e6b8b631faf49a3666e4558b71ae" }
ssz_types = { git = "https://github.com/ReamLabs/ssz_types", branch = "magic-extended-list" } # Extends 2^29 to 2^40 list root