[package]
name = "host"
version = "0.1.0"
edition = "2024"

[dependencies]
# OpenVM dependencies
openvm.workspace = true
openvm-sdk.workspace = true
openvm-circuit.workspace = true
openvm-stark-sdk.workspace = true
openvm-build.workspace = true
openvm-transpiler.workspace = true
openvm-benchmarks-prove.workspace = true
openvm-rv32im-circuit.workspace = true
openvm-rv32im-transpiler.workspace = true
openvm-stark-backend = {workspace = true}

# Plonky dependencies
p3-monty-31.workspace = true
p3-baby-bear.workspace = true

# Ream dependencies
ream-consensus = { workspace = true }
ream-lib = { workspace = true }

# Local dependencies
utils.workspace = true

# Miscellaneous dependencies
eyre.workspace = true
serde.workspace = true
clap = { version = "4.0", features = ["derive", "env"] }
derive_more = { version = "2.0.1", features = ["full"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { workspace = true }
tree_hash = { workspace = true }

[features]
perf-metrics = ["openvm-sdk/perf-metrics"]